# Qt_Project

./: CMakeLists.txt  README.md  Receiver-x86_64.AppImage  main.cpp  receiver.cpp  res.qrc
Qt_Project.AppDir/: Qt_Project.desktop
Qt_Project.AppDir/usr/lib/: libcap.so.2  libdbus-1.so.3  libglib-2.0.so.0  libgthread-2.0.so.0  libsystemd.so.0  libxcb-glx.so.0  libxcb-icccm.so.4  libxcb-image.so.0  libxcb-keysyms.so.1  libxcb-randr.so.0  libxcb-render-util.so.0  libxcb-shape.so.0  libxcb-sync.so.1  libxcb-util.so.1  libxcb-xfixes.so.0  libxcb-xinerama.so.0  libxcb-xkb.so.1  libxkbcommon-x11.so.0  libxkbcommon.so.0
Qt_Project.AppDir/usr/share/applications/: Qt_Project.desktop
Receiver.AppDir/: AppRun
Receiver.AppDir/usr/share/applications/: Receiver.desktop
src/: DDSTextWidget.cpp  DDSTextWidget.h  MainWindow.cpp  MainWindow.h  MyWidget.cpp  MyWidget.h  TableWidget.cpp  TableWidget.h  TreeWidget.cpp  TreeWidget.h
src/IDL/: IDL_DataReader.cpp  IDL_DataReader.h  IDL_DataWriter.cpp  IDL_DataWriter.h  IDL_StringMessage.cpp  IDL_StringMessage.h  IDL_TypeSupport.h  StringMessage.idl
uDDS/include/: BasicTypes.h
uDDS/include/DDS/: DataReader.h
